Add optional audio channel testing functionality
- Added test_audio_channels flag to control channel testing
- Created test_channels.yml with tasks to test each audio channel
- Updated main.yml to include the channel testing tasks
- Modified test-overlay.yml to allow overriding the testing flag
- Channel testing is disabled by default and can be enabled with --extra-vars

--- a/roles/overlay/defaults/main.yml
+++ b/roles/overlay/defaults/main.yml
@@ -4,3 +4,6 @@
 # Paths
 overlay_dir: /boot/firmware/overlays
 config_file: /boot/firmware/config.txt
+
+# Testing options
+test_audio_channels: false  # Set to true to test all audio channels
