Add audio recording functionality
- Reverted previous channel testing approach (speaker-test)
- Added multichannel audio recording functionality (48kHz, 24-bit)
- Created record_channels.yml task file for recording from I2S inputs
- Added record-channels-only.yml playbook for standalone recording
- Updated test-overlay.yml to allow disabling recording
- Updated README with comprehensive documentation
- Recording is enabled by default and requires external audio source
- Added proper check mode support for all tasks
- Added support for multiple formats (S16_LE, S24_LE, S32_LE) and sample rates (44.1kHz, 48kHz, 96kHz)
- Added timestamps to recording filenames to prevent overwriting

--- a/roles/overlay/defaults/main.yml
+++ b/roles/overlay/defaults/main.yml
@@ -4,3 +4,8 @@
 # Paths
 overlay_dir: /boot/firmware/overlays
 config_file: /boot/firmware/config.txt
+
+# Recording options
+record_audio_channels: true  # Enabled by default, records all channels to a single WAV file
+recording_dir: /tmp/audio_recordings
+recording_duration: 5  # Duration in seconds (shorter since we're recording multiple files)
