Add soundtest role for testing sound card and speakers

--- a/site.yml
+++ b/site.yml
@@ -7,6 +7,9 @@
     - role: overlay
       tags: [overlay]
     
+    - role: soundtest
+      tags: [soundtest]
+    
     - role: camilladsp
       tags: [camilladsp]
     
