--- a/roles/config/defaults/main.yml
+++ b/roles/config/defaults/main.yml
@@ -1,9 +1,6 @@
 ---
-# Enable or disable the config role (disabled by default)
-config_enabled: false
-
 # Source directory for configuration files on the local machine
-# This must be specified by the user when enabling the role
+# This must be specified by the user to enable the role
 config_source_dir: ""
 
 # Destination directory for configuration files on the target machine
