Add volume control role for FLIRC IR receiver integration

--- a/site.yml
+++ b/site.yml
@@ -21,3 +21,7 @@
     - role: config
       tags: [config]
       when: config_source_dir | length > 0
+      
+    - role: volume
+      tags: [volume]
+      when: volume_control_enabled | bool
